--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,52 @@
-apispec==1.2.0
-astroid==2.2.5
-attrs==19.1.0
-Babel==2.6.0
-certifi==2019.3.9
-chardet==3.0.4
-Click==7.0
-colorama==0.4.1
-defusedxml==0.5.0
-fab-addon-audit==0.0.1
-Flask==1.0.2
-Flask-AppBuilder==1.13.0
-Flask-Babel==0.12.2
-Flask-JWT-Extended==3.18.1
+apispec==3.3.2
+astroid==2.4.2
+attrs==20.3.0
+Babel==2.9.0
+click==7.1.2
+colorama==0.4.4
+defusedxml==0.6.0
+dnspython==2.0.0
+email-validator==1.1.2
+et-xmlfile==1.0.1
+Flask==1.1.2
+Flask-AppBuilder==3.1.1
+Flask-Babel==1.0.0
+Flask-Cors==3.0.10
+Flask-JWT-Extended==3.25.0
 Flask-Login==0.4.1
 Flask-OpenID==1.2.5
-Flask-SQLAlchemy==2.3.2
-Flask-WTF==0.14.2
-idna==2.8
-isort==4.3.17
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+idna==2.10
+importlib-metadata==3.1.0
+isort==5.6.4
 itsdangerous==1.1.0
-Jinja2==2.10.1
-jsonschema==3.0.1
-lazy-object-proxy==1.3.1
+jdcal==1.4.1
+Jinja2==2.11.2
+jsonschema==3.2.0
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
-marshmallow==2.19.2
-marshmallow-enum==1.4.1
-marshmallow-sqlalchemy==0.16.2
+marshmallow==3.9.1
+marshmallow-enum==1.5.1
+marshmallow-sqlalchemy==0.23.1
 mccabe==0.6.1
-mysqlclient==1.4.2.post1
-prison==0.1.0
+mysqlclient==2.0.1
+openpyxl==3.0.5
+prison==0.1.3
 PyJWT==1.7.1
-pylint==2.3.1
-pyrsistent==0.14.11
-python-dateutil==2.8.0
-python3-openid==3.1.0
-pytz==2019.1
-PyYAML==5.1
-requests==2.21.0
-six==1.12.0
-SQLAlchemy==1.3.2
-typed-ast==1.3.1
-urllib3==1.24.1
-Werkzeug==0.15.2
-wrapt==1.11.1
-WTForms==2.2.1
+pylint==2.6.0
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+python3-openid==3.2.0
+pytz==2020.4
+PyYAML==5.3.1
+six==1.15.0
+SQLAlchemy==1.3.20
+SQLAlchemy-Utils==0.36.8
+toml==0.10.2
+typed-ast==1.4.1
+uWSGI==2.0.19.1
+Werkzeug==1.0.1
+wrapt==1.12.1
+WTForms==2.3.3
+zipp==3.4.0
